vclusters/private/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: vcluster-loadbalancer
  namespace: vcluster-private
spec:
  selector:
    app: vcluster
    release: vcluster-private
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  type: LoadBalancer
  LoadBalancerIP: 192.168.10.80
