vclusters/private/dns-metworkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-vcluster-private
  namespace: vcluster-private
spec:
  podSelector:
    matchLabels:
      release: vcluster-private
  egress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              k8s-app: node-local-dns
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  policyTypes:
    - Egress
