vclusters/private/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-in-namespace-policy
  namespace: vcluster-private
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector: {}
  ingress:
  - from:
    - podSelector: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-namespace-policy
  namespace: vcluster-private
spec:
  podSelector:
    matchLabels:
      app: vcluster
  policyTypes:
  - Egress
  egress:
  - {}
